[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/Xolonium-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -14.0
margin_right = 14.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.352
anchor_right = 0.5
anchor_bottom = 0.352
margin_left = -55.0
margin_top = -28.112
margin_right = 55.0
margin_bottom = 61.888
rect_pivot_offset = Vector2( 424, 190.888 )
custom_fonts/font = SubResource( 1 )
text = "Jump
for your
life!"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -85.0
margin_right = 54.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="RestartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.0
margin_top = -85.0
margin_right = 58.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
